ADD_EXECUTABLE(findhelloslam main.cpp)
FIND_PACKAGE(HELLOSLAM)
IF(HELLOSLAM_FOUND)
    INCLUDE_DIRECTORIES(${HELLOSLAM_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(findhelloslam ${HELLOSLAM_LIBRARY})
#    MESSAGE("HelloSLAM library found")
    MESSAGE("HelloSLAM_INCLUDE_DIR = " ${HELLOSLAM_INCLUDE_DIR})
    MESSAGE("HelloSLAM_LIBRARY = " ${HELLOSLAM_LIBRARY})
ELSE(HELLOSLAM_FOUND)
    MESSAGE(FARAL_ERROR "HelloSLAM library not found")
ENDIF(HELLOSLAM_FOUND)

#INCLUDE_DIRECTORIES(/usr/include/hello)
#TARGET_LINK_LIBRARIES(findhelloslam HelloSLAM)

